# python-lsp-compare

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  latest-results.md  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md
configs/: lsp_servers.example.json
docs/: tsp-benchmark-plan.md
latest-results/: pylsp-mypy-20260320T220921Z-responses.jsonl  pylsp-mypy-20260320T220921Z.json  pylsp-mypy-20260320T232017Z.json  pylsp-mypy-20260321T063103Z-responses.jsonl  pylsp-mypy-20260321T063103Z.json  pylsp-mypy-20260322T063828Z.json  pylsp-mypy-20260323T065805Z-responses.jsonl  pylsp-mypy-20260323T065805Z.json  pylsp-mypy-20260324T065237Z.json  pylsp-mypy-20260327T065650Z.json  pylsp-mypy-20260329T062122Z.json  pylsp-mypy-20260408T181208Z.json  pylsp-mypy-20260408T224610Z.json  pylsp-mypy-20260408T225920Z.json  pylsp-mypy-20260408T235144Z.json  pylsp-mypy-20260420T211624Z-responses.jsonl  pylsp-mypy-20260420T211624Z.json  pylsp-mypy-20260421T185233Z.json  pylsp-mypy-20260421T233624Z-responses.jsonl  pylsp-mypy-20260421T233624Z.json  pylsp-mypy-20260429T064548Z.json  pylsp-mypy-20260504T230046Z-responses.jsonl  pylsp-mypy-20260504T230046Z.json  pylsp-mypy-20260504T233714Z-responses.jsonl  pylsp-mypy-20260504T233714Z.json  pylsp-mypy-20260505T002234Z.json  pylsp-mypy-20260505T064131Z.json  pylsp-mypy-20260506T065027Z-responses.jsonl  pylsp-mypy-20260506T065027Z.json  pylsp-mypy-20260507T065459Z.json  pylsp-mypy-20260508T063204Z.json  pylsp-mypy-20260509T063928Z.json  pylsp-mypy-20260510T065052Z.json  pylsp-mypy-20260511T070434Z.json  (+259 more)
(+51 files in other folders)
