[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-lsp-compare"
version = "0.1.0"
description = "Benchmark and compare Python LSP servers over stdio JSON-RPC."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
  { name = "python-lsp-compare contributors" }
]
keywords = ["lsp", "language-server-protocol", "benchmark", "python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
  "Topic :: Text Editors :: Integrated Development Environments"
]
dependencies = []

[project.optional-dependencies]
dev = []

[project.scripts]
lsp-compare = "python_lsp_compare.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
